baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__optional_dropping_function_value.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.combine(x: int, a: int, b: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x // param
    let _2: int // a // param
    let _3: int // b // param
    let _4: bool
    let _5: bool
    let _6: int

    bb0: {
        _4 = copy _2 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _5 = copy _3 == const <omitted>;
        branch copy _5 -> [bb3, bb4];
    }

    bb3: {
        _3 = const 100_i64;
        goto -> bb4;
    }

    bb4: {
        _6 = copy _1 + copy _2;
        _0 = copy _6 + copy _3;
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.main() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: (int, int) -> int throws never // f
    let _2: (int, int) -> int throws never

    bb0: {
        _1 = const fn user.combine;
        _2 = copy _1;
        _0 = call copy _2(const 1_i64, const 5_i64) -> [bb1];
    }

    bb1: {
        return;
    }
}
