baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__reflect_type_of_array.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.f() -> type {
    // Locals:
    let _0: type // _0 // return

    bb0: {
        _0 = load_type(Array(Concrete(Int { attr: TyAttr { sap_parse_without_null: Unset, sap_pending_never: Unset, sap_in_progress_never: Unset, asserts: [] } })));
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
