baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__reflect_type_of_array_of_typevar.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.f() -> type {
    // Locals:
    let _0: type // _0 // return

    bb0: {
        _0 = load_type(Array(TypeArgRef(0)));
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
