baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__reflect_type_of_class.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.User.from_json(j: baml.json.json) -> User {
    // Locals:
    let _0: User // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(User);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.User.to_json(self: User) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: User // self // param
    let _2: baml.json.json
    let _3: string
    let _4: User

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _2 = call const fn baml.String.to_json(copy _3) -> [bb1];
    }

    bb1: {
        _0 = { const "name": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.f() -> type {
    // Locals:
    let _0: type // _0 // return

    bb0: {
        _0 = load_type(User);
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
