baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__runtime_id_read_lowers_to_baml_id_current.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.f() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = call const fn baml.id.current() -> [bb1];
    }

    bb1: {
        return;
    }
}
